Updated to fix weird spacing issues

--- a/Discord/Client/Style/DM List Nitro Button Hider.css
+++ b/Discord/Client/Style/DM List Nitro Button Hider.css
@@ -1,3 +1,3 @@
-[href="/store"] {
-    display: none;
+li:has([href="/store"]) {
+  display: none;
 }
