--- a/Discord/Client/Style/DM List Shop Button Hider.css
+++ b/Discord/Client/Style/DM List Shop Button Hider.css
@@ -1,3 +1,3 @@
-[href="/shop"] {
-    display: none;
+li:has([href="/shop"]) {
+  display: none;
 }
